--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     color: #333;
     direction: rtl;
 }
+
 header {
     background-color: #006699;
     color: white;
@@ -33,6 +34,7 @@ header nav a {
 header nav a:hover {
     text-decoration: underline;
 }
+
 section#mission-goals {
     background-color: #fff;
     padding: 40px;
@@ -57,25 +59,65 @@ section#mission-goals p {
 section#mission-goals strong {
     color: #006699;
 }
-/* تنسيق صفحة الاوائل */
+
+#graduation-projects {
+    padding: 40px;
+    background-color: #ffffff;
+    margin: 20px auto;
+    max-width: 900px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#graduation-projects h2 {
+    font-size: 28px;
+    color: #006699;
+    margin-bottom: 30px;
+}
+
+.project-card {
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.project-info h3 {
+    font-size: 22px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.project-info p {
+    margin: 5px 0;
+    font-size: 18px;
+    color: #555;
+}
+
+
+.project-card:hover {
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+    transition: all 0.3s ease;
+}
+
 #top-students {
     padding: 20px;
-    background-color: #006699; /* لون الخلفية الأزرق */
-    color: white; /* لون النص باللون الأبيض */
+    background-color: #006699;
+    color: white;
     margin: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 #top-students h2 {
-
     text-align: center;
     color: #ffffff;
     font-size: 28px;
     margin-bottom: 20px;
 }
 
-/* تنسيق البطاقة الخاصة بكل طالب */
 .student-card {
     background-color: #f9f9f9;
     margin-bottom: 20px;
