--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ section#mission-goals img {
 
 #top-students {
     padding: 20px;
-    background-color: #006699;
+    /* background-color: #006699; */
     color: white;
     margin: 20px;
     border-radius: 10px;
@@ -123,8 +123,8 @@ section#mission-goals img {
 }
 
 #top-students h2 {
-    text-align: center;
-    color: #ffffff;
+    /* text-align: center; */
+    color: #006699;
     font-size: 28px;
     margin-bottom: 20px;
 }
@@ -146,5 +146,8 @@ section#mission-goals img {
 .student-info p {
     margin: 5px 0;
     color: #555;
+}
+.student-card:hover {
+    background-color: #e0f0ff;
 }
 
