--- a/style.css
+++ b/style.css
@@ -111,6 +111,59 @@ section#mission-goals img {
     transform: scale(1.02);
     transition: all 0.3s ease;
 }
+/* تنسيق قسم الهيئة التدريسية */
+#faculty {
+    padding: 40px;
+    background-color: #ffffff;
+    margin: 20px auto;
+    max-width: 900px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#faculty h2 {
+    font-size: 28px;
+    color: #006699;
+    margin-bottom: 30px;
+}
+
+.faculty-member {
+    display: flex;
+    align-items: center;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.faculty-member img {
+    border-radius: 50%;
+    margin-right: 20px;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.faculty-info h3 {
+    font-size: 22px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.faculty-info p {
+    margin: 5px 0;
+    font-size: 18px;
+    color: #555;
+}
+
+.faculty-member:hover {
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
+    transition: all 0.3s ease;
+}
+
 
 
 #top-students {
